# turtle

./: AUTHORS  ChangeLog  HACKING  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  mkinstalldirs  version.h.in
crawl/: ChangeLog  Makefile.am  Makefile.in  README  arraymap.t  arrays.t  arraysearch.t  arraysort.t  binary.t  bintree.t  bools.t  bstrees.t  chars.t  cmdline.t  compare.t  compose.t  core.t  core.t.i  exceptions.t  filenames.t  hash.t  hashtab.t  identity.t  ints.t  io.t  listfold.t  listindex.t  listmap.t  listreduce.t  lists.t  listsearch.t  listsort.t  listzip.t  longs.t  math.t  math.t.i  option.t  pairs.t  random.t  reals.t  (+6 more)
crawl/internal/: ChangeLog  Makefile.am  Makefile.in  README  binary.t  binary.t.i  debug.t  debug.t.i  ex.t  ex.t.i  gc.t  gc.t.i  limits.t  random.t  random.t.i  stats.t  stats.t.i  timeout.t  timeout.t.i  version.t  version.t.i
crawl/sys/: ChangeLog  Makefile.am  Makefile.in  README  dirs.t  dirs.t.i  errno.t  errno.t.i  files.t  files.t.i  net.t  net.t.i  procs.t  procs.t.i  sigs.t  sigs.t.i  times.t  times.t.i  users.t  users.t.i
doc/: ChangeLog  Makefile.am  Makefile.in  README  tagging.text  texinfo.tex  turtle.info  turtle.info-1  turtle.info-2  turtle.info-3  turtle.info-4  turtle.texi
doc/da/: Makefile.am  Makefile.in  appendix.tex  binary-constraint.epic  binary-constraint.fig  cip-literature.bib  compiler.epic  compiler.fig  compiling.epic  compiling.fig  constrainable-vars.epic  constrainable-vars.fig  constraint-imperative.tex  constraint-programming.tex  constraint.epic  constraint.fig  cover-text.tex  da.dvi  da.tex  data-header.epic  data-header.fig  data-rep.epic  data-rep.fig  diploma.cls  dispatcher.epic  dispatcher.fig  float.sty  introduction.tex  runtime-schema.epic  runtime-schema.fig  splitting.epic  splitting.fig  summary.tex  temperature.epic  temperature.fig  thema.tex  turtle-impl.tex  turtle.tex  variables.epic  variables.fig
emacs/: ChangeLog  Makefile.am  Makefile.in  README  turtle-mode.el  turtle-utils.el
examples/: ChangeLog  Makefile.am  Makefile.in  README  config.t  constraints.t  copy_file.t  counter.t  dirlist.t  even_module.t  evenodd.t  fac.t  fac_iterative.t  fib.t  game.t  hanoi.t  hello.t  hello2.t  helloclient.t  helloserver.t  higher_order.t  html.t  http.t  indigo.t  interpret.t  layout.t  loop.t  min_ex.t  minimal.t  miniwget.t  module_params.t  odd_module.t  omaopa.t  overloading.t  queens.t  queens_cip.t  sendmory.t  sendmory2.t  tak.t  test_copy_file.sh  (+3 more)
libturtle/: ChangeLog  Makefile.am  Makefile.in  README  ast.c  ast.h  codegen.c  codegen.h  compiler.c  compiler.h  emit-c.c  emit-c.h  env.c  env.h  error.c  error.h  fd-solver.c  fd-solver.h  il.c  il.h  indigo.c  indigo.h  init.c  init.h  libturtle.h  libturtlert.c  libturtlert.h  memory.c  memory.h  parser.c  parser.h  scanner.c  scanner.h  symbols.c  symbols.h  turtle-path.h  types.c  types.h  util.c  util.h
misc/: ChangeLog  Makefile.am  Makefile.in  README  turtle-logo-color.xcf  turtle-logo.xcf
tests/: ChangeLog  Makefile.am  Makefile.in  README  array0.t  array1.t  arraytest.t  binary0.t  booltest.t  bstrees0.t  constraints0.t  constraints1.t  exceptions0.t  filenames0.t  foreign0.t  fun0.t  fun1.t  hashtab0.t  import0.t  internal_timeout0.t  inttest.t  lex0.t  lex1.t  list0.t  listfold0.t  listindex0.t  listreduce0.t  listtest.t  listzip0.t  longtest.t  math0.t  overloading0.t  overloading1.t  overloading2.t  pairs0.t  parse0.t  parse1.t  rand0.t  stress0.t  stress1.t  (+16 more)
tools/: ChangeLog  Makefile.am  Makefile.in  README  analyze.t  ast.t  env.t  make-assembler.sh  parser.t  scanner.t  turtledoc.t  types.t
turtle/: ChangeLog  Makefile.am  Makefile.in  README  lala.t  turtle.c
